Details
-
Bug
-
Resolution: Fixed
-
Major
-
None
Description
20230408-0.4.15-dev-5922-gfc5311a
20230408-0.4.15-dev-5922-gfc5311a-resizing-FAILED.png
20230408-0.4.15-dev-5922-gfc5311a-resizing.log
[^ReactOS-screen0.webm]
Our mspaint on ReactOS happens freezing of canvas when frequently resizing the image.
However our mspaint on Win10 is working well.
The log:
...
|
(ntoskrnl/mm/ARM3/pool.c:497) FAILED to allocate 610680 bytes from paged pool
|
(win32ss/gdi/ntgdi/bitmaps.c:137) SURFACE_AllocSurface failed.
|
(win32ss/gdi/ntgdi/bitmaps.c:300) Failed to allocate a bitmap!
|
(ntoskrnl/mm/ARM3/pool.c:497) FAILED to allocate 610680 bytes from paged pool
|
(win32ss/gdi/ntgdi/bitmaps.c:137) SURFACE_AllocSurface failed.
|
(win32ss/gdi/ntgdi/bitmaps.c:300) Failed to allocate a bitmap!
|
...
|
Attachments
Issue Links
- relates to
-
CORE-18867 mspaint: Refactor and improve
-
- Resolved
-