[MSPAINT] Fix handle leaks about memory bitmap

This fixes CORE-18919. CORE-18867